cabal-version:      3.0
name:               memoria-aeterna
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
maintainer:         stevensantosgarcia@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
common aeson
  build-depends: aeson >=2.2 && <2.3

common bytestring
  build-depends: bytestring >=0.10 && <0.13

common directory
  build-depends: directory >=1.3 && <1.4  

common lucid2
    build-depends: lucid2 == 0.0.20250303

common htmx-lucid
    build-depends: htmx-lucid == 0.2.0.1

common scotty
    build-depends: scotty == 0.12.1

common text
  build-depends: text >=1.2.4 && <2.2

common wai-extra
  build-depends: wai-extra >=3.1 && <3.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable memoria-aeterna
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        aeson,
        base ^>=4.17.2.1,
        bytestring,
        directory,
        htmx-lucid,
        lucid2,
        memoria-aeterna,
        scotty,
        text,
        wai-extra

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite memoria-aeterna-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        memoria-aeterna
